--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,10 +128,10 @@
 @theme {
   --text-2xs: clamp(0.25rem, 0.162rem + 0.3756vw, 0.5rem);
   --text-xs: clamp(0.5rem, 0.412rem + 0.3756vw, 0.75rem);
-  --text-s: clamp(0.75rem, 0.662rem + 0.3756vw, 1rem);
-  --text-m: clamp(1rem, 0.8239rem + 0.7512vw, 1.5rem);
-  --text-l: clamp(1.5rem, 1.1479rem + 1.5023vw, 2.5rem);
-  --text-xl: clamp(2rem, 1.4718rem + 2.2535vw, 3.5rem);
-  --text-2xl: clamp(3rem, 2.2958rem + 3.0047vw, 5rem);
-  --text-3xl: clamp(4.0625rem, 2.8521rem + 5.1643vw, 7.5rem);
+  --text-sm: clamp(0.75rem, 0.662rem + 0.3756vw, 1rem);
+  --text-md: clamp(1rem, 0.8239rem + 0.7512vw, 1.15rem);
+  --text-lg: clamp(1.15rem, 1.1479rem + 1.5023vw, 1.25rem);
+  --text-xl: clamp(1.25rem, 1.4718rem + 2.2535vw, 1.5rem);
+  --text-2xl: clamp(1.5rem, 2.2958rem + 3.0047vw, 3rem);
+  --text-3xl: clamp(3rem, 2.8521rem + 5.1643vw, 5rem);
 }
